[tool.poetry]
name = "legalnaivelaws"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansicolors = "^1.1.8"
colored = "^1.4.2"
termcolor = "^1.1.0"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
